added license LPPLv1.3c

--- a/rcurs.sty
+++ b/rcurs.sty
@@ -11,6 +11,7 @@
 % The PDF images and Griffiths' original TeX file defining these characters are available on his webpage
 % These symbols work in math mode and paragraph mode
 % Only one font size
+% Licensed under LPPLv1.3c
 
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 \ProvidesPackage{rcurs}
